--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-  "name": "treebot",
+  "name": "firebase-backup-bot",
   "version": "0.0.0",
-  "private": true,
-  "author": "Brice Nkengsa <brice@andela.co>",
-  "description": "Handles backups of Skilltree data in Firebase",
+  "author": "Brice Nkengsa <brice@andela.com>",
+  "description": "Handles automated backups of Firebase data to Amazon S3",
   "dependencies": {
-    "async": "^0.9.0",
+    "async": "0.9.0",
     "aws-sdk": "latest",
-    "filesize": "^3.1.2",
-    "firebase": "^2.1.2",
-    "firebase-token-generator": "^2.0.0",
-    "hubot": "^2.11.0",
+    "filesize": "3.1.2",
+    "firebase": "2.1.2",
+    "firebase-token-generator": "2.0.0",
+    "hubot": "2.11.0",
     "hubot-diagnostics": "0.0.1",
-    "hubot-google-images": "^0.1.2",
-    "hubot-google-translate": "^0.1.0",
-    "hubot-help": "^0.1.1",
+    "hubot-google-images": "0.1.2",
+    "hubot-google-translate": "0.1.0",
+    "hubot-help": "0.1.1",
     "hubot-heroku-keepalive": "0.0.4",
     "hubot-maps": "0.0.1",
-    "hubot-pugme": "^0.1.0",
+    "hubot-pugme": "0.1.0",
     "hubot-redis-brain": "0.0.2",
-    "hubot-rules": "^0.1.0",
-    "hubot-scripts": "^2.5.16",
-    "hubot-shipit": "^0.1.1",
-    "hubot-slack": "^3.2.1",
-    "hubot-youtube": "^0.1.2",
-    "lodash": "^3.1.0",
-    "moment": "^2.8.2",
-    "cron": "^1.0.9 "
+    "hubot-rules": "0.1.0",
+    "hubot-scripts": "2.5.16",
+    "hubot-shipit": "0.1.1",
+    "hubot-slack": "3.2.1",
+    "hubot-youtube": "0.1.2",
+    "lodash": "3.1.0",
+    "moment": "2.8.2",
+    "cron": "1.0.9 "
   },
   "engines": {
     "node": "0.10.x"
