--- a/package.json
+++ b/package.json
@@ -6,26 +6,22 @@
   "dependencies": {
     "async": "0.9.0",
     "aws-sdk": "latest",
+    "cron": "1.0.9 ",
+    "dotenv": "^2.0.0",
     "filesize": "3.1.2",
-    "firebase": "2.1.2",
-    "firebase-token-generator": "2.0.0",
+    "firebase": "3.6.0",
+    "firebase-admin": "^4.0.1",
     "hubot": "2.11.0",
     "hubot-diagnostics": "0.0.1",
-    "hubot-google-images": "0.1.2",
-    "hubot-google-translate": "0.1.0",
     "hubot-help": "0.1.1",
-    "hubot-heroku-keepalive": "0.0.4",
-    "hubot-maps": "0.0.1",
     "hubot-pugme": "0.1.0",
     "hubot-redis-brain": "0.0.2",
     "hubot-rules": "0.1.0",
     "hubot-scripts": "2.5.16",
     "hubot-shipit": "0.1.1",
     "hubot-slack": "3.2.1",
-    "hubot-youtube": "0.1.2",
     "lodash": "3.1.0",
-    "moment": "2.8.2",
-    "cron": "1.0.9 "
+    "moment": "2.8.2"
   },
   "engines": {
     "node": "0.10.x"
