--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "firebase-admin": "^4.0.1",
     "hubot": "2.11.0",
     "hubot-diagnostics": "0.0.1",
+    "hubot-google-images": "^0.2.6",
+    "hubot-google-translate": "^0.2.0",
     "hubot-help": "0.1.1",
+    "hubot-heroku-keepalive": "^1.0.2",
     "hubot-pugme": "0.1.0",
     "hubot-redis-brain": "0.0.2",
     "hubot-rules": "0.1.0",
