--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "hubot-scripts": "2.5.16",
     "hubot-shipit": "0.1.1",
     "hubot-slack": "3.2.1",
-    "lodash": "3.1.0",
+    "lodash": ">=4.17.5",
     "moment": "2.19.3"
   },
   "engines": {
